feat: add family tree graph APIs
